# pythonpackage

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
docs/: CONTRIBUTING.md  conf.py  illustration.afdesign  index.md
docs/md/: acknowledgement.md  installation.md
package_name/: __init__.py  config.py
packagename/: __init__.py
tests/: test_blank.py
