[tool.poetry]
name = "pythonpackage"
version = "0.0.1"
description = ""
authors = ["Lionel Garcia <lionel_garcia@live.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
twine = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
docutils = "*"
jupyterlab = "*"
myst-parser = "*"
sphinx-book-theme = "^1.0.0"
myst-nb = "*"
sphinx-copybutton = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = [
    "sphinx",
    "docutils",
    "jupyterlab",
    "myst-parser",
    "sphinx-book-theme",
    "myst-nb",
    "sphinx-copybutton",
]
dev = ["pytest", "black", "twine"]
